# miden-rust

./: Cargo.toml  README.md  todo.md
lib/: Cargo.toml  README.md
lib/examples/: adv_pipe.masm  catalan.masm  errors.masm  example.masm  fibonacci.masm  game_of_life.masm  matrix_mul.masm
lib/inputs/: adv_pipe.json  catalan.json  collatz.json  comparison.json  example.json  fibonacci.json  game_of_life.json  matrix_mul.json  prime.json  while.json
lib/programs/: add.masm  add_n.masm  adv_pipe.masm  catalan.masm  collatz.masm  comparison.masm  conditional.masm  conditional_manipulation.masm  div.masm  div_n.masm  empty_program.masm  error.masm  example.masm  fibonacci.masm  game_of_life.masm  hex.masm  inv.masm  loc_store.masm  loc_store_w.masm  matrix_mul.masm  mem_store.masm  mem_store_n.masm  mem_store_w.masm  mem_store_w_n.masm  movdn.masm  movdnw.masm  movup.masm  movupw.masm  mul.masm  mul_n.masm  nested_if_else.masm  nested_repeat.masm  not.masm  parse.masm  prime.masm  refresh.masm  repeat.masm  sub.masm  sub_n.masm  swap.masm  (+3 more)
lib/src/: inputs.rs  lib.rs
lib/src/parser/: errors.rs  field_ops.rs  io_ops.rs  mod.rs  sanitize.rs  stack_ops.rs  sys_ops.rs  token.rs  tokenizer.rs  u32_ops.rs
lib/src/program/: block.rs  empty.rs  error.rs  execute.rs  field.rs  instruction.rs  io.rs  manipulation.rs  methods.rs  mod.rs  operand.rs  parser.rs  proc.rs  u32.rs  utils.rs
lib/src/program/execute/: arithmetic.rs  boolean.rs  comparison.rs  conditional_manipulation.rs  extensions.rs  manipulation.rs  memory.rs  mod.rs  utils.rs  (+3 more)
lib/tests/: miden_program_tests.rs
(+8 files in other folders)
