[package]
name = "rust-masm"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
math = { package = "winter-math", git ="https://github.com/facebook/winterfell.git", branch="main", default-features = false, features = ["serde"] }
miden-assembly = "0.7.0"
miden-stdlib = "0.6.0"
miden-vm = "0.7.0"
