[package]
name = "rust-masm"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
winter-utils = { package = "winter-utils", version = "0.6", default-features = false }
miden-vm = "0.7.0"
hex = { version = "0.4" }